--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -27,13 +27,16 @@ library
     exposed-modules: Simulation.Aivika.Experiment
                      Simulation.Aivika.Experiment.HtmlWriter
                      Simulation.Aivika.Experiment.LastValueView
+                     Simulation.Aivika.Experiment.TableView
                      
     build-depends:   base >= 3 && < 6,
                      mtl >= 1.1.0.2,
                      array >= 0.3.0.0,
                      containers >= 0.4.0.0,
                      directory >= 1.1.0.2,
+                     filepath >= 1.3.0.0,
                      MissingH >= 1.2.0.0,
+                     network >= 2.4.0.1,
                      aivika >= 0.4.2
 
     extensions:      FlexibleContexts
