--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -15,7 +15,7 @@ license-file:    LICENSE
 copyright:       (c) 2012. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
-homepage:        http://github.com/dsorokin/aivika
+homepage:        http://github.com/dsorokin/aivika-experiment
 cabal-version:   >= 1.2.0
 build-type:      Simple
 tested-with:     GHC == 7.4.1
