View for the timing statistics.

--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -28,6 +28,8 @@ library
                      Simulation.Aivika.Experiment.HtmlWriter
                      Simulation.Aivika.Experiment.LastValueView
                      Simulation.Aivika.Experiment.TableView
+                     Simulation.Aivika.Experiment.TimingStatsView
+                     Simulation.Aivika.Experiment.TimingStatsWriter
                      Simulation.Aivika.Experiment.Histogram
                      Simulation.Aivika.Experiment.Utils
                      
