--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -39,6 +39,7 @@ library
                      containers >= 0.4.0.0,
                      directory >= 1.1.0.2,
                      filepath >= 1.3.0.0,
+                     utf8-string >= 0.3.7,
                      MissingH >= 1.2.0.0,
                      network >= 2.3.0.13,
                      parallel-io >= 0.3.2.1,
