--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -35,6 +35,7 @@ library
                      Simulation.Aivika.Experiment.Histogram
                      Simulation.Aivika.Experiment.ExperimentSpecsView
                      Simulation.Aivika.Experiment.ExperimentSpecsWriter
+                     Simulation.Aivika.Experiment.FinalTableView
                      Simulation.Aivika.Experiment.Utils
                      
     build-depends:   base >= 3 && < 6,
@@ -47,7 +48,7 @@ library
                      MissingH >= 1.2.0.0,
                      network >= 2.3.0.13,
                      parallel-io >= 0.3.2.1,
-                     aivika >= 0.4.3
+                     aivika >= 0.5.1
 
     extensions:      FlexibleInstances
                      
