--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -1,5 +1,5 @@
 name:            aivika-experiment
-version:         0.2.1
+version:         0.2.2
 synopsis:        Simulation experiments for the Aivika library
 description:
     This package allows defining simulation experiments for the Aivika
@@ -12,13 +12,13 @@ description:
 category:        Simulation
 license:         BSD3
 license-file:    LICENSE
-copyright:       (c) 2012. David Sorokin <david.sorokin@gmail.com>
+copyright:       (c) 2012-2013. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
 homepage:        http://github.com/dsorokin/aivika-experiment
 cabal-version:   >= 1.2.0
 build-type:      Simple
-tested-with:     GHC == 7.4.1
+tested-with:     GHC == 7.6.3
 
 extra-source-files:  examples/MachRep3.hs
 
@@ -45,7 +45,7 @@ library
                      directory >= 1.1.0.2,
                      filepath >= 1.3.0.0,
                      utf8-string >= 0.3.7,
-                     MissingH >= 1.2.0.0,
+                     split >= 0.2.2,
                      network >= 2.3.0.13,
                      parallel-io >= 0.3.2.1,
                      aivika >= 0.5.1
