--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -31,6 +31,7 @@ library
                      Simulation.Aivika.Experiment.TimingStatsView
                      Simulation.Aivika.Experiment.TimingStatsWriter
                      Simulation.Aivika.Experiment.SamplingStatsWriter
+                     Simulation.Aivika.Experiment.SamplingStatsSource
                      Simulation.Aivika.Experiment.FinalStatsView
                      Simulation.Aivika.Experiment.Histogram
                      Simulation.Aivika.Experiment.ExperimentSpecsView
