An example with arrays will be included in the distributive.

--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -21,6 +21,7 @@ build-type:      Simple
 tested-with:     GHC == 7.6.3
 
 extra-source-files:  examples/MachRep3.hs
+                     examples/LinearArray.hs
                      examples/README
 
 library
