--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -1,5 +1,5 @@
 name:            aivika-experiment
-version:         0.4.1
+version:         1.0
 synopsis:        Simulation experiments for the Aivika library
 description:
     This package allows defining simulation experiments for the Aivika
@@ -10,7 +10,7 @@ description:
     The library is extensible and you can add new views for the results.
     .
 category:        Simulation
-license:         BSD3
+license:         GPL
 license-file:    LICENSE
 copyright:       (c) 2012-2013. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
@@ -53,7 +53,7 @@ library
                      split >= 0.2.2,
                      network >= 2.3.0.13,
                      parallel-io >= 0.3.2.1,
-                     aivika >= 0.7.1
+                     aivika >= 1.0
 
     extensions:      FlexibleInstances
                      
