--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -10,9 +10,9 @@ description:
     The library is extensible and you can add new views for the results.
     .
 category:        Simulation
-license:         GPL
+license:         BSD3
 license-file:    LICENSE
-copyright:       (c) 2012-2013. David Sorokin <david.sorokin@gmail.com>
+copyright:       (c) 2012-2014. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
 homepage:        http://github.com/dsorokin/aivika-experiment
