--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -56,7 +56,8 @@ library
                      parallel-io >= 0.3.2.1,
                      aivika >= 1.2.1
 
-    extensions:      FlexibleInstances
+    extensions:      FlexibleInstances,
+                     MultiParamTypeClasses
                      
     ghc-options:     -O2
 
