Introducing the FileRenderer class type. It will be more important later, but not now.

--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -28,6 +28,7 @@ library
 
     exposed-modules: Simulation.Aivika.Experiment
                      Simulation.Aivika.Experiment.Types
+                     Simulation.Aivika.Experiment.FileRenderer
                      Simulation.Aivika.Experiment.HtmlWriter
                      Simulation.Aivika.Experiment.LastValueView
                      Simulation.Aivika.Experiment.TableView
