Introduced a general class WebPageRendering as a sub-class of ExperimentRendering.

--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -53,6 +53,7 @@ library
                      aivika >= 1.4
 
     extensions:      FlexibleInstances,
+                     FlexibleContexts,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      RankNTypes
