--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -39,6 +39,7 @@ library
                      Simulation.Aivika.Experiment.ExperimentSpecsWriter
                      Simulation.Aivika.Experiment.ExperimentWriter
                      Simulation.Aivika.Experiment.FinalTableView
+                     Simulation.Aivika.Experiment.InfoView
                      Simulation.Aivika.Experiment.Utils
                      Simulation.Aivika.Experiment.MRef
                      Simulation.Aivika.Experiment.WebPageRenderer
