--- a/aivika-experiment.cabal
+++ b/aivika-experiment.cabal
@@ -1,23 +1,26 @@
 name:            aivika-experiment
-version:         4.0.3
+version:         5.0
 synopsis:        Simulation experiments for the Aivika library
 description:
-    This package allows defining simulation experiments for the aivika [1]
-    package. Such experiments define in declarative manner what should be
-    simulated and in which view the simulation results should be 
-    generated. It can return charts, tables and so on.
+    This package allows defining simulation experiments based on the aivika [1]
+    and aivika-transformers [2] packages. Such experiments define in declarative 
+    manner what should be simulated and in which view the simulation results should 
+    be generated. It can directly return charts, tables and so on. Additionally, it
+    can save the results in SQL databases.
     .
     The library is extensible and you can add new views for the results.
     .
     \[1] <http://hackage.haskell.org/package/aivika>
     .
+    \[2] <http://hackage.haskell.org/package/aivika-transformers>
+    .
 category:        Simulation
 license:         BSD3
 license-file:    LICENSE
-copyright:       (c) 2012-2015. David Sorokin <david.sorokin@gmail.com>
+copyright:       (c) 2012-2017. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
-homepage:        http://github.com/dsorokin/aivika-experiment
+homepage:        http://www.aivikasoft.com
 cabal-version:   >= 1.6
 build-type:      Simple
 tested-with:     GHC == 7.10.1
@@ -28,24 +31,28 @@ extra-source-files:  examples/MachRep3.hs
 library
 
     exposed-modules: Simulation.Aivika.Experiment
+                     Simulation.Aivika.Experiment.Concurrent.MVar
                      Simulation.Aivika.Experiment.Types
-                     Simulation.Aivika.Experiment.HtmlWriter
-                     Simulation.Aivika.Experiment.LastValueView
-                     Simulation.Aivika.Experiment.TableView
-                     Simulation.Aivika.Experiment.TimingStatsView
-                     Simulation.Aivika.Experiment.TimingStatsWriter
-                     Simulation.Aivika.Experiment.SamplingStatsWriter
-                     Simulation.Aivika.Experiment.FinalStatsView
+                     Simulation.Aivika.Experiment.Base
+                     Simulation.Aivika.Experiment.Base.ExperimentSpecsView
+                     Simulation.Aivika.Experiment.Base.ExperimentSpecsWriter
+                     Simulation.Aivika.Experiment.Base.ExperimentWriter
+                     Simulation.Aivika.Experiment.Base.FileRenderer
+                     Simulation.Aivika.Experiment.Base.FinalStatsView
+                     Simulation.Aivika.Experiment.Base.FinalTableView
+                     Simulation.Aivika.Experiment.Base.InfoView
+                     Simulation.Aivika.Experiment.Base.HtmlWriter
+                     Simulation.Aivika.Experiment.Base.LastValueView
+                     Simulation.Aivika.Experiment.Base.SamplingStatsWriter
+                     Simulation.Aivika.Experiment.Base.TableView
+                     Simulation.Aivika.Experiment.Base.TimingStatsView
+                     Simulation.Aivika.Experiment.Base.TimingStatsWriter
+                     Simulation.Aivika.Experiment.Base.WebPageRenderer
                      Simulation.Aivika.Experiment.Histogram
-                     Simulation.Aivika.Experiment.ExperimentSpecsView
-                     Simulation.Aivika.Experiment.ExperimentSpecsWriter
-                     Simulation.Aivika.Experiment.ExperimentWriter
-                     Simulation.Aivika.Experiment.FinalTableView
-                     Simulation.Aivika.Experiment.InfoView
                      Simulation.Aivika.Experiment.Utils
-                     Simulation.Aivika.Experiment.MRef
-                     Simulation.Aivika.Experiment.WebPageRenderer
-                     Simulation.Aivika.Experiment.FileRenderer
+                     Simulation.Aivika.Trans.Experiment
+                     Simulation.Aivika.Trans.Experiment.Concurrent.MVar
+                     Simulation.Aivika.Trans.Experiment.Types
                      
     build-depends:   base >= 4.2 && < 6,
                      mtl >= 1.1.0.2,
@@ -55,9 +62,11 @@ library
                      split >= 0.2.2,
                      network-uri >= 2.6,
                      parallel-io >= 0.3.2.1,
-                     aivika >= 4.0.3
+                     aivika >= 5.1,
+                     aivika-transformers >= 5.1
 
     extensions:      MultiParamTypeClasses,
+                     FlexibleContexts,
                      TypeFamilies
                      
     ghc-options:     -O2
